--- a/rca/static_src/sass/abstracts/_mixins.scss
+++ b/rca/static_src/sass/abstracts/_mixins.scss
@@ -137,7 +137,7 @@
     background-position: 0% 100%;
     background-repeat: no-repeat;
     background-size: 100% 2px;
-    transition: background-size $cubic-transition;
+    transition: background-size $transition-cubic;
 
     @include media-query(medium) {
         background-size: 0% 2px;
