--- a/rca/static_src/sass/components/_image-info.scss
+++ b/rca/static_src/sass/components/_image-info.scss
@@ -19,7 +19,7 @@
     }
 
     .title-area & {
-        transition: color $cubic-transition;
+        transition: color $transition-cubic;
 
         .bg--dark & {
             color: $color--meta-darkbg;
