--- a/rca/static_src/sass/components/_profile-detail.scss
+++ b/rca/static_src/sass/components/_profile-detail.scss
@@ -28,7 +28,7 @@
         width: 100%;
         height: auto;
         margin-bottom: $gutter;
-        transition: opacity $cubic-transition;
+        transition: opacity $transition-cubic;
     }
 
     &__header {
