--- a/rca/static_src/sass/components/_reset.scss
+++ b/rca/static_src/sass/components/_reset.scss
@@ -4,7 +4,7 @@
     display: inline-flex;
     align-items: center;
     opacity: 1;
-    transition: opacity $cubic-transition;
+    transition: opacity $transition-cubic;
 
     @include media-query(large) {
         @include underline-hover();
