--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -56,6 +56,7 @@
 @import 'components/hero-action-pane';
 @import 'components/icon';
 @import 'components/index-module';
+@import 'components/instagram-feed';
 @import 'components/job-titles';
 @import 'components/image';
 @import 'components/image-caption-link';
