--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -130,8 +130,9 @@ $mini-header-height: 80px;
 
 // --------------------------------- Transitions --------------------------------------
 
-$transition: 0.25s ease-out;
-$cubic-transition: 250ms cubic-bezier(0.24, 0.26, 0.2, 1);
+$transition: 250ms ease-out;
+$transition-opacity: 0.36;
+$transition-cubic: 250ms cubic-bezier(0.24, 0.26, 0.2, 1);
 
 // --------------------------------- Custom properties --------------------------------------
 
