--- a/rca/static_src/sass/components/_filter-bar.scss
+++ b/rca/static_src/sass/components/_filter-bar.scss
@@ -37,7 +37,7 @@
     &__link {
         display: inline-flex;
         align-items: center;
-        transition: color $cubic-transition;
+        transition: color $transition-cubic;
 
         &.active {
             position: relative;
