--- a/rca/static_src/sass/components/_modal-launcher.scss
+++ b/rca/static_src/sass/components/_modal-launcher.scss
@@ -11,7 +11,7 @@
         flex-direction: row;
         justify-content: space-between;
         border-top: 4px solid $color--tertiary;
-        transition: border-color $cubic-transition;
+        transition: border-color $transition-cubic;
     }
 
     &__label {
@@ -28,7 +28,7 @@
         justify-content: center;
         width: ($gutter * 2.25);
         background-color: $color--tertiary;
-        transition: background-color $cubic-transition;
+        transition: background-color $transition-cubic;
     }
 
     &__icon {
@@ -36,7 +36,7 @@
         width: 18px;
         height: 18px;
         transform: rotate(-45deg);
-        transition: fill $cubic-transition;
+        transition: fill $transition-cubic;
     }
 
     &:hover {
