--- a/rca/static_src/sass/components/_carousel.scss
+++ b/rca/static_src/sass/components/_carousel.scss
@@ -85,6 +85,63 @@
         }
     }
 
+    &--logo {
+        grid-column: auto;
+        margin-bottom: 0;
+        padding: $gutter 0;
+
+        @include media-query(medium) {
+            padding: 0;
+        }
+
+        #{$root}__container {
+            @include media-query(large) {
+                padding-right: var(--outer-grid-width);
+            }
+        }
+
+        #{$root}__item {
+            &:nth-child(3n) {
+                @include media-query(large) {
+                    padding-right: var(--outer-grid-width);
+                }
+            }
+        }
+
+        #{$root}__controls-group {
+            display: none;
+            pointer-events: none;
+
+            @include media-query(large) {
+                display: grid;
+                position: absolute;
+                top: 50%;
+                left: 0;
+                right: 0;
+                transform: translate3d(0, -50%, 0); // align in centre
+            }
+        }
+
+        #{$root}__button {
+            pointer-events: auto;
+            position: relative;
+
+            &--prev {
+                grid-column: 2 / span 1;
+                left: -77px;
+            }
+
+            &--next {
+                grid-column: 5 / span 1;
+                left: 30px;
+            }
+
+            &:disabled {
+                opacity: 0;
+            }
+        }
+    }
+
     &--no-margin {
         margin-bottom: $gutter;
     }
