--- a/rca/static_src/sass/components/_staggered-cards.scss
+++ b/rca/static_src/sass/components/_staggered-cards.scss
@@ -7,6 +7,10 @@
         margin-bottom: ($gutter * 8);
     }
 
+    &--no-margin {
+        margin-bottom: 0;
+    }
+
     &__container {
         display: flex;
         flex-direction: column;
