--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -65,6 +65,7 @@
 @import 'components/key-details';
 @import 'components/link';
 @import 'components/logo';
+@import 'components/logo-card';
 @import 'components/modal';
 @import 'components/modal-launcher';
 @import 'components/nav';
