--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -78,7 +78,7 @@
             <section class="schools__about section section--start bg bg--dark" id="about">
 
                 {% if about_teasers %}
-                <div class="section__row schools__about--teasers">
+                <div class="section__row section__row--last schools__about--teasers">
                     <div class="section__header section__header--bottom-space grid">
                         <h2 class="section__heading section__heading--tight heading heading--two">{{ page.sections.about.title|default:"About us" }}</h2>
                         {% if page.sections.about.introduction %}
@@ -88,24 +88,24 @@
                         {% endif %}
                     </div>
                     <div class="section__content grid">
-                        {% include "patterns/organisms/staggered-cards/staggered-cards.html" with staggered_cards=about_teasers %}
+                        {% include "patterns/organisms/staggered-cards/staggered-cards.html" with staggered_cards=about_teasers modifier="no-margin" %}
                     </div>
                 </div>
                 {% endif %}
 
-                <div class="section__row schools__about--logos">
+                <div class="section__row section__row--last schools__about--logos">
                     <div class="section__header grid">
-                        <h3 class="section__heading section__heading--primary heading heading--two">Organisations we've worked with</h3>
+                        <h3 class="section__heading section__heading--secondary heading heading--five">Organisations we've worked with</h3>
                     </div>
-                    <div class="section__content grid">
-                        {% include "patterns/organisms/logo-carousel/logo-carousel.html" %}
+                    <div class="section__content">
+                        {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=worked_with.slides datatag="data-logo-carousel" %}
                     </div>
                 </div>
 
                 {% if news_and_events %}
-                <div class="section__row schools__about--news">
+                <div class="section__row section__row--last schools__about--news">
                     <div class="section__header grid">
-                        <h3 class="section__heading section__heading--primary heading heading--two">What's happening</h3>
+                        <h3 class="section__heading section__heading--primary heading heading--four">What's happening</h3>
                     </div>
                     <div class="section__content grid">
                         {% include "patterns/organisms/news/news_api_content.html" with news=news_and_events %}
@@ -116,7 +116,7 @@
                 {% if student_stories %}
                 <div class="section__row schools__about--student-stories partnerships__carousel">
                     <div class="section__header grid">
-                        <h3 class="section__heading section__heading--primary heading heading--two">Student stories</h3>
+                        <h3 class="section__heading section__heading--primary heading heading--four">Student stories</h3>
                     </div>
                     {% include "patterns/organisms/carousel/carousel--square.html" with carousel=student_stories.slides modifier='carousel--square' datatag='data-square-carousel' %}
                 </div>
@@ -182,12 +182,12 @@
                 </div>
                 {% endif %}
 
-                <div class="section__row schools__about--logos {% if research_links or research_cta %}section__row--last-small{% else %}section__row--last-large{% endif %}">
+                <div class="section__row schools__about--logos {% if research_links or research_cta %}section__row--last{% else %}section__row--last-large{% endif %}">
                     <div class="section__header grid">
                         <h3 class="section__heading section__heading--secondary heading heading--five">Research collaboration with&hellip;</h3>
                     </div>
-                    <div class="section__content grid">
-                        {% include "patterns/organisms/logo-carousel/logo-carousel.html" %}
+                    <div class="section__content">
+                        {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=research_collaboration.slides datatag="data-logo-carousel" %}
                     </div>
                 </div>
 
