--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -4,7 +4,7 @@
 $color--black: #000;
 $color--white: #fff;
 $color--orange: #ff5d1c;
-$color--light-grey: #959595;
+$color--light-grey: #bbb;
 $color--dark-grey: #676767;
 
 $color--white-12: rgba($color--white, 0.12);
