--- a/rca/static_src/sass/components/_related-content.scss
+++ b/rca/static_src/sass/components/_related-content.scss
@@ -14,6 +14,10 @@
             }
         }
 
+        #{$root}__listing {
+            position: relative;
+        }
+
         #{$root}__meta,
         #{$root}__copy {
             // target first and second items
@@ -66,6 +70,20 @@
             left: 0;
             bottom: 0;
             right: 0;
+        }
+    }
+
+    &--sticky {
+        #{$root}__image-container {
+            height: 100%;
+
+            &::before {
+                content: none;
+            }
+        }
+
+        #{$root}__image {
+            position: sticky;
         }
     }
 
@@ -239,6 +257,10 @@
     &__degree {
         opacity: 0.4;
         margin-bottom: ($gutter / 4);
+    }
+
+    &__action {
+        margin-top: ($gutter * 1.5);
     }
 
     .app--short-course & {
