--- a/rca/static_src/sass/components/_profile-detail.scss
+++ b/rca/static_src/sass/components/_profile-detail.scss
@@ -15,7 +15,9 @@
                 }
 
                 #{$root}__heading {
-                    @include underline-hover();
+                    @include media-query(medium) {
+                        @include underline-hover-target-reset();
+                    }
                 }
             }
         }
@@ -36,6 +38,7 @@
     }
 
     &__heading {
+        @include underline-hover-target();
         display: inline;
         position: relative;
     }
@@ -117,70 +120,63 @@
     .people-module--five-plus & {
         grid-row: auto;
         grid-column: 1 / span 2;
+        margin-bottom: $gutter;
 
         @include media-query(medium) {
-            grid-column: 1 / span 1;
+            grid-column: auto / span 1;
             padding-right: ($gutter * 2.5);
         }
 
         @include media-query(large) {
-            grid-column: 1 / span 1;
             padding-right: 0;
+            margin-bottom: ($gutter * 1.5);
         }
 
-        &:nth-of-type(2) {
-            @include media-query(medium) {
-                grid-column: 2 / span 1;
-                margin-top: $margin-top-medium-breakpoint;
-            }
-
-            @include media-query(large) {
-                grid-column: 3 / span 1;
-                margin-top: $margin-top-large-breakpoint;
-            }
+        #{$root}__container {
+            display: flex;
+            flex-direction: row;
         }
 
-        &:nth-of-type(n + 3) {
-            margin-bottom: $gutter;
-
-            @include media-query(large) {
-                margin-bottom: ($gutter * 1.5);
-            }
-
-            #{$root}__container {
-                display: flex;
-                flex-direction: row;
-            }
-
-            #{$root}__image {
-                flex-basis: 60px;
-                max-width: 60px;
-                min-width: 60px;
-                height: 60px;
-            }
-
-            #{$root}__content {
-                padding-left: $gutter;
-            }
-
-            #{$root}__more {
-                display: none;
-            }
-
-            #{$root}__header {
-                line-height: 1.2;
-            }
-
-            #{$root}__heading {
-                @include font-size(xs);
-            }
-
-            #{$root}__job-title {
-                @include font-size(xxs);
-            }
+        #{$root}__image {
+            flex-basis: 60px;
+            max-width: 60px;
+            min-width: 60px;
+            height: 60px;
+            margin-bottom: 0;
         }
 
-        &:nth-of-type(4) {
+        #{$root}__content {
+            padding-left: $gutter;
+        }
+
+        #{$root}__overview {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 100%;
+        }
+
+        #{$root}__more {
+            display: none;
+        }
+
+        #{$root}__header {
+            line-height: 1.2;
+            margin-bottom: 2px;
+        }
+
+        #{$root}__heading {
+            @include font-size(xxs);
+            font-family: $font--secondary;
+            margin-bottom: 0;
+        }
+
+        #{$root}__job-title {
+            @include font-size(xxxs);
+            margin-bottom: 0;
+        }
+
+        &:nth-of-type(17) {
             @include media-query(medium) {
                 grid-column: 1 / span 1;
             }
@@ -188,14 +184,6 @@
             @include media-query(large) {
                 grid-column: 2 / span 2;
                 padding-right: 50%;
-            }
-        }
-
-        &:nth-of-type(n + 5) {
-            grid-column: 1 / span 2;
-
-            @include media-query(medium) {
-                grid-column: auto / span 1;
             }
         }
     }
