--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -256,7 +256,7 @@
                         {% endif %}
                     </div>
                     <div class="section__content">
-                        {% include "patterns/organisms/people-module/people-module.html" with people=staff %}
+                        {% include "patterns/organisms/people-module/people-module.html" with people=staff title=False %}
                     </div>
                 </div>
 
