--- a/rca/static_src/sass/components/_carousel.scss
+++ b/rca/static_src/sass/components/_carousel.scss
@@ -230,6 +230,32 @@
         }
     }
 
+    .people-module & {
+        &__controls-group {
+            position: absolute;
+            top: 50%;
+            width: 100%;
+            left: 0;
+            right: 0;
+            transform: translate3d(0, -50%, 0);
+        }
+
+        &__button {
+            position: relative;
+
+            &--prev {
+                grid-column: 2;
+                left: -($gutter * 2);
+                transform: translate3d(-100%, 0, 0);
+            }
+
+            &--next {
+                grid-column: 5;
+                left: ($gutter * 2);
+            }
+        }
+    }
+
     .partnerships & {
         margin-bottom: 0; // Reducing bottom space due to API module removal
     }
