--- a/rca/project_styleguide/templates/patterns/organisms/people-module/people-module.html
+++ b/rca/project_styleguide/templates/patterns/organisms/people-module/people-module.html
@@ -19,7 +19,7 @@
         <div class="people-module__container"> 
         {% endif %}
 
-            <div class="people-module__content {% if people|length > 17 %}people-module__content--carousel carousel glide" data-people-carousel data-slidetotal="{{ people|length }}"{% else %}"{% endif %}>
+            <div class="people-module__content {% if people|length > 17 %}people-module__content--carousel carousel carousel--people glide" data-people-carousel data-slidetotal="{{ people|length }}"{% else %}"{% endif %}>
                 {% if people|length > 17 %}
                     <div data-glide-el="track" class="people-module__carousel-container carousel__container glide__track">
                         <ul class="people-module__carousel-slides carousel__slides glide__slides" aria-live="polite">
@@ -52,7 +52,9 @@
                     <div class="carousel__controls">
                         <div class="carousel__bullet-container" data-glide-el="controls[nav]">
                             {% for profile in people %}
-                                <button class="carousel__bullet" data-glide-dir="={{ forloop.counter }}" aria-label="Slide {{ forloop.counter }}"></button>
+                                {% if forloop.counter0|divisibleby:17 %}
+                                    <button class="carousel__bullet" data-glide-dir="={{ forloop.counter }}" aria-label="Slide {{ forloop.counter }}"></button>
+                                {% endif %}
                             {% endfor %}
                         </div>
                     </div>
