--- a/rca/static_src/sass/components/_carousel.scss
+++ b/rca/static_src/sass/components/_carousel.scss
@@ -146,6 +146,47 @@
         margin-bottom: $gutter;
     }
 
+    &--people {
+        #{$root}__controls {
+            margin-right: $gutter;
+            margin-left: $gutter;
+
+            @include media-query(medium) {
+                margin-right: ($gutter * 3);
+                margin-left: ($gutter * 3);
+            }
+        }
+
+        #{$root}__controls-group {
+            display: none;
+
+            @include media-query(large) {
+                display: grid;
+                position: absolute;
+                top: 50%;
+                width: 100%;
+                left: 0;
+                right: 0;
+                transform: translate3d(0, -50%, 0);
+            }
+        }
+
+        #{$root}__button {
+            position: relative;
+
+            &--prev {
+                grid-column: 2;
+                left: -($gutter * 2);
+                transform: translate3d(-100%, 0, 0);
+            }
+
+            &--next {
+                grid-column: 5;
+                left: ($gutter * 2);
+            }
+        }
+    }
+
     &__item {
         opacity: $transition-opacity;
         transition: opacity $transition;
@@ -227,32 +268,6 @@
         &:disabled {
             opacity: 0;
             pointer-events: none;
-        }
-    }
-
-    .people-module & {
-        &__controls-group {
-            position: absolute;
-            top: 50%;
-            width: 100%;
-            left: 0;
-            right: 0;
-            transform: translate3d(0, -50%, 0);
-        }
-
-        &__button {
-            position: relative;
-
-            &--prev {
-                grid-column: 2;
-                left: -($gutter * 2);
-                transform: translate3d(-100%, 0, 0);
-            }
-
-            &--next {
-                grid-column: 5;
-                left: ($gutter * 2);
-            }
         }
     }
 
