--- a/rca/static_src/sass/components/_people-module.scss
+++ b/rca/static_src/sass/components/_people-module.scss
@@ -55,11 +55,16 @@
 
     /* Carousel specific */
     &__carousel-item {
-        @include media-query(large) {
+        @include media-query(medium) {
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
+            margin-bottom: $gutter;
+        }
+
+        @include media-query(large) {
             max-width: calc(var(--grid-width) * 3);
+            margin-bottom: 0;
         }
     }
 
