Refactoring people module and carousel

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -11,6 +11,7 @@
 @import 'base/base';
 @import 'base/typography';
 @import 'base/layout';
+@import 'base/utility';
 
 // Components
 @import 'components/accordion';
@@ -78,6 +79,7 @@
 @import 'components/pathways';
 @import 'components/pathway-item';
 @import 'components/partnerships';
+@import 'components/people-carousel';
 @import 'components/people-module';
 @import 'components/profile-detail';
 @import 'components/profile-image';
