--- a/rca/project_styleguide/templates/patterns/organisms/people-module/people-module.html
+++ b/rca/project_styleguide/templates/patterns/organisms/people-module/people-module.html
@@ -14,49 +14,19 @@
                     <h2 class="heading heading--four people-module__heading {% if anchor_heading %}anchor-heading{% endif %}" {% if anchor_heading %}id="staff"{% endif %}>{{ title }}</h2>
                 </div>
             {% endif %}
+            
         {% if people|length > 17 %}
         </div>
         <div class="people-module__container"> 
         {% endif %}
 
-            <div class="people-module__content {% if people|length > 17 %}people-module__content--carousel carousel carousel--people glide" data-people-carousel data-slidetotal="{{ people|length }}"{% else %}"{% endif %}>
+            <div class="people-module__content {% if people|length > 17 %}people-module__content--carousel{% endif %}">
                 {% if people|length > 17 %}
-                    <div data-glide-el="track" class="people-module__carousel-container carousel__container glide__track">
-                        <ul class="people-module__carousel-slides carousel__slides glide__slides" aria-live="polite">
-                            <li class="people-module__carousel-slide-item carousel__item glide__slide">
-                                <div class="people-module__carousel-item">
-                            {% for profile in people %}
-                                {% if forloop.counter0|divisibleby:17 and not forloop.first %}    
-                                        </div>
-                                    </li>
-                                    <li class="people-module__carousel-slide-item carousel__item glide__slide">
-                                        <div class="people-module__carousel-item">
-                                {% endif %}
-                                {% include "patterns/molecules/profile-detail/profile-detail.html" with item=profile %}
-                            {% endfor %}
-                            </li>
-                        </ul>
+                    <div class="u-small-bp-only">
+                        {% include "patterns/molecules/people-carousel/people-carousel.html" with item=people perSlide=5 %}
                     </div>
-                    <div class="carousel__controls-group grid" data-glide-el="controls">
-                        <button class="carousel__button carousel__button--prev button" aria-label="Previous image" data-glide-dir="<">
-                            <svg class="carousel__button-icon" width="46" height="46" aria-hidden="true">
-                                <use xlink:href="#arrow-left" />
-                            </svg>
-                        </button>
-                        <button class="carousel__button carousel__button--next button" aria-label="Next image" data-glide-dir=">">
-                            <svg class="carousel__button-icon" width="46" height="46" aria-hidden="true">
-                                <use xlink:href="#arrow-right" />
-                            </svg>
-                        </button>
-                    </div>
-                    <div class="carousel__controls">
-                        <div class="carousel__bullet-container" data-glide-el="controls[nav]">
-                            {% for profile in people %}
-                                {% if forloop.counter0|divisibleby:17 %}
-                                    <button class="carousel__bullet" data-glide-dir="={{ forloop.counter }}" aria-label="Slide {{ forloop.counter }}"></button>
-                                {% endif %}
-                            {% endfor %}
-                        </div>
+                    <div class="u-medium-and-large-bp-only">
+                        {% include "patterns/molecules/people-carousel/people-carousel.html" with item=people perSlide=17 %}
                     </div>
                 {% else %}
                     {% for profile in people %}
