--- a/rca/static_src/sass/components/_index-module.scss
+++ b/rca/static_src/sass/components/_index-module.scss
@@ -13,6 +13,12 @@
         }
     }
 
+    &__heading {
+        &:first-child {
+            padding-top: 0; // ensure anchor-heading doesn't override
+        }
+    }
+
     &__content {
         grid-column: 1 / span 2;
 
