--- a/rca/static_src/sass/components/_introduction.scss
+++ b/rca/static_src/sass/components/_introduction.scss
@@ -2,6 +2,10 @@
     $root: &;
     line-height: $line-height-large;
 
+    &--end {
+        margin-bottom: ($gutter * 2);
+    }
+
     &__text {
         margin-bottom: ($gutter * 2);
     }
