Applying visual fix to programme intro

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -13,7 +13,7 @@
             </div>
             <div class="programme-overview__body">
                 {% if page.programme_description_subtitle %}
-                    <h4 class="introduction heading heading--five" property="schema:description">{{ page.programme_description_subtitle }}</h4>
+                    <h4 class="introduction introduction--end heading heading--five" property="schema:description">{{ page.programme_description_subtitle }}</h4>
                 {% endif %}
                 {% if page.programme_image %}
                     {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=page.programme_video image=page.programme_image caption=page.programme_video_caption video=page.programme_video out_of_grid="true" heading=false has_meta=false subheading=false copy=false %}
