--- a/rca/static_src/sass/components/_link.scss
+++ b/rca/static_src/sass/components/_link.scss
@@ -245,6 +245,10 @@
 
     &__label {
         margin-right: 5px;
+
+        &--tight {
+            margin-right: $gutter;
+        }
     }
 
     .bg--dark & {
