--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -72,7 +72,7 @@
 
         <div class="page__content schools landing-page">
 
-            {% include "patterns/molecules/tab-nav/tab-nav.html" with modifier="bg bg--dark" sticky="true" tabs=page.tabs %}
+            {% include "patterns/molecules/tab-nav/tab-nav.html" with modifier="bg bg--dark" sticky=True tabs=page.tabs %}
 
             {# About #}
             <section class="schools__about section section--start bg bg--dark" id="about">
@@ -98,7 +98,12 @@
                         <h2 class="section__heading section__heading--secondary heading heading--five">Organisations we've worked with</h2>
                     </div>
                     <div class="section__content">
-                        {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=worked_with.slides datatag="data-logo-carousel" %}
+                        <div class="u-small-bp-only">
+                            {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=worked_with.slides datatag="data-logo-carousel" per_slide=2 %}
+                        </div>
+                        <div class="u-medium-and-large-bp-only">
+                            {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=worked_with.slides datatag="data-logo-carousel" per_slide=3 %}
+                        </div>
                     </div>
                 </div>
 
@@ -200,7 +205,7 @@
             </section>
 
             {# Programmes #}
-            <section class="schools__programmes section section--start bg bg--light" id="programmes">
+            <section class="schools__programmes section section--start bg bg--light" id="programmes-short-courses">
                 <div class="section__row section__row--last-small">
                     <div class="section__header grid">
                         <h2 class="section__heading section__heading--secondary section__heading--tight heading heading--two">
